# mod-dot

./: .gitignore  CMakeLists.txt
src/: dot.c  dot.h  dot_avx.h  dot_avx512.c  dot_avx512.h  dot_sse2.h  makefile-mex  makefile-oct
